refactor: rename functions

--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -195,7 +195,7 @@ html {
   font-size: 1.4em;
 }
 
-.dialog-craft-message-box {
+.send-message-block {
   width: 100%;
   height: 50px;
   display: flex;
